# python-timeouts

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml
tests/: conftest.py  test_aiohttp.py  test_asyncpg.py  test_boto3.py  test_cassandra_driver.py  test_elasticsearch.py  test_ftplib.py  test_http.py  test_httpx.py  test_imap.py  test_influxdb.py  test_mongoengine.py  test_mysqlclient.py  test_nntplib.py  test_opensearch_py.py  test_osqp.py  test_pg8000.py  test_poplib.py  test_psycopg.py  test_psycopg2.py  test_pygithub.py  test_pymemcache.py  test_pymongo.py  test_redis.py  test_requests.py  test_scs.py  test_smtplib.py  test_socket.py  test_sqlalchemy.py  test_stripe.py  test_subprocess.py  test_telnetlib.py  test_trino.py  test_typesense.py  test_urllib.py  test_urllib3.py  test_valkey.py
